--- a/src/styles/BlogHome.css
+++ b/src/styles/BlogHome.css
@@ -284,8 +284,11 @@ html, body{
     flex-flow: row wrap;
     justify-content: space-around;
 }
-.blog-home .main-section .about-section .about-sec-grid .about-text .technologies > div .languages i{
-    margin: 4px 4px;
+/* .blog-home .main-section .about-section .about-sec-grid .about-text .technologies > div .languages i{
+    margin: 10px 4px 2px 4px;
+} */
+.blog-home .main-section .about-section .about-sec-grid .about-text .technologies > div .languages i, .frameworks i, .tools i, .tools svg{
+    margin: 10px 4px 2px 4px;
 }
 .blog-home .main-section .about-section .about-sec-grid .about-text .technologies > div .frameworks{
     display: flex;
@@ -300,9 +303,14 @@ html, body{
 .blog-home .main-section .about-section .about-sec-grid .about-text .technologies > div i{
     font-size: 34px;
 }
-.blog-home .main-section .about-section .about-sec-grid .about-text .technologies > div i.devicon-nodejs-plain-wordmark{
+/* .blog-home .main-section .about-section .about-sec-grid .about-text .technologies > div i.devicon-nodejs-plain-wordmark{
     font-size: 40px;
+} */
+.blog-home .main-section .about-section .about-sec-grid .about-text .technologies div.tools div.actual-tech svg{
+    height: 40px;
+    height: 40px;
 }
+
 .blog-home .main-section .about-section .about-sec-grid .about-text .technologies > div img{
     width: 40px;
     height: 40px;
